# RDSA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
configs/: gemma3.yaml  internvl2.yaml  llama32.yaml  llava.yaml  minicpm_v.yaml  qwen3vl.yaml
data/: advbench.csv  safe_prompts.jsonl  unsafe_prompts.jsonl
docs/: EXPERIMENT_DESIGN.md  EXPERIMENT_GUIDE.md  MATH.md
rdsa/: config.py  evaluate.py  identify.py  train.py
rdsa/attacks/: __init__.py  baselines.py  scia.py
rdsa/defense/: __init__.py  monitor.py
rdsa/evaluation/: __init__.py  benchmarks.py  metrics.py
rdsa/models/: model_utils.py
rdsa/subspace/: metrics.py
rdsa/training/: __init__.py  losses.py  trainer.py
scripts/: collect_results.py  exp10_pareto.py  exp1_main_comparison.py  exp2_ablation.py  exp3_sa_at_analysis.py  exp4_redundancy_analysis.py  exp5_entanglement_analysis.py  exp6_capability.py  exp7_adaptive_attacks.py  exp8_transfer.py  exp9_sensitivity.py  experiment_utils.py  plot_pareto.py  prepare_contrast_data.py  run_ablation.py  run_all_experiments.py  visualize_entanglement.py
slides/: TALK_SCRIPT.md  main.tex
src/rdsa/: __init__.py  config.py  evaluate.py  identify.py  train.py
src/rdsa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rdsa/attacks/: __init__.py  adaptive.py  scia.py  umk.py
src/rdsa/defense/: monitor.py
src/rdsa/evaluation/: __init__.py  judge.py
src/rdsa/models/: __init__.py  hooks.py  model_utils.py
tests/: test_attacks.py  test_hooks.py  test_losses.py  test_monitor.py  test_subspace.py
(+6 files in other folders)
